# fav-ups

./: .gitignore  README.md
FINAL/client/: install.sh
FINAL/client/onitama/: engine.py  game.py  intro.py  main.py  parser.py
FINAL/server/: CMakeLists.txt  Card.cpp  Card.h  Command.h  Game.h  Lobby.h  Makefile  Parser.cpp  Parser.h  Player.cpp  State.cpp  State.h  server  server.cpp
client/: install.bat  install.sh  installs.sh  installs.txt
client/onitama/: client.bat  client.sh  components.py  engine.py  game.py  intro.py  main.py  network.py  onitama_engine.py  onitama_main.py  parser.py  run_client.sh
client/venv_win/: pyvenv.cfg
client/venv_win/Scripts/: activate  activate.bat  activate.fish  activate.nu
diagrams/: sequence.uxf  state.uxf
docs/: Documentation.docx  Protocol.docx
docs/diagrams/: flowchart.uxf  game_state.uxf  player_state.uxf  protocol_example.uxf
server/: CMakeLists.txt  Card.cpp  Card.h  Cmd.cpp  Cmd.h  Command.cpp  Command.h  Game.cpp  Game.h  Help.cpp  Help.h  Lobby.cpp  Lobby.h  Makefile  Parser.cpp  Parser.h  Player.cpp  Player.h  State.cpp  State.h  State_Machine.cpp  State_Machine.h  server  server.cpp  valgrind-out.txt
